external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/too_many_entries_renaming_instantiation/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 6, column 34
  |
6 | A = { local = "a", rename-from = { A = { B = "0x1", R = "0x2" } } }
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
invalid type: map, expected a string
